--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@linaria/babel-preset": "^5.0.4",
     "@linaria/core": "^6.2.0",
     "@linaria/react": "^6.2.1",
+    "@types/react-google-recaptcha": "^2.1.9",
     "i18next": "^23.16.1",
     "i18next-http-backend": "^2.6.2",
     "rc-select": "^14.15.0",
